--- a/TestCoreAPI/TestCoreAPI.csproj
+++ b/TestCoreAPI/TestCoreAPI.csproj
@@ -6,6 +6,16 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+    <ItemGroup>
+	    <None Remove="Static\js\score-metrics.js" />
+	    <None Remove="Static\score-metrics.html" />
+    </ItemGroup>
+
+    <ItemGroup>
+	    <Content Include="Static\js\score-metrics.js" />
+	    <Content Include="Static\score-metrics.html" />
+    </ItemGroup>
+	
   <ItemGroup>
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit.Console" Version="3.15.0" />
